--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@types/mysql": "0.0.34",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^8.0.1",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
     "mysql": "^2.14.1",
