--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
     "mysql": "^2.14.1",
+    "nodemailer": "^4.1.0",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
