--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
+    "express-fileupload": "^0.2.0",
     "express-jwt": "^5.3.0",
+    "formidable": "^1.1.1",
     "jsonwebtoken": "^8.0.1",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
