--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-fileupload": "^0.2.0",
